--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📈 Stock Market Predictor</h1>
+        <h1>Stock Market Predictor</h1>
         
         <div class="card">
             <form id="prediction-form">
